主要な機能を追加し、依存関係を更新しました。ビデオ処理と推論のための新しい関数を実装し、プロンプトファイルを作成しました。また、必要なパッケージを追加し、依存関係を整理しました。

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "accelerate>=1.10.1",
+    "ipython>=9.5.0",
     "qwen-vl-utils[decord]>=0.0.11",
+    "torchvision>=0.23.0",
     "transformers==4.51.3",
 ]
